--- a/3e/Théorème de Thalès/Utiliser la réciproque du théorème de Thalès.html
+++ b/3e/Théorème de Thalès/Utiliser la réciproque du théorème de Thalès.html
@@ -6,47 +6,25 @@
         var typefigure = 0;
 
         function testReponse() {
-            var txt1 = document.getElementById("reponse1").value;
-            var txt2 = document.getElementById("reponse2").value;
-            document.getElementById("TextReponse").innerHTML = "";
-            var txt;
-            var ar = [];
-            if (typefigure == 0){
-                txt = ["BC = ","DC = ","BD = ","AB = ","ED = ","AE = "];
-                ar = [values[2][1],values[2][2],values[2][5],
-                    Round(values[2][0] - values[2][1]),
-                    Round(values[2][3] - values[2][2]),values[2][4]];
-            }
-            else
-            {
-                txt = ["BC = ","DC = ","BD = ","AC = ","EC = ","AE = "];
-                ar = [values[2][1],values[2][2],values[2][5],
-                      values[2][0],values[2][3],values[2][4]];
-            }
-            if (ar[values[0]].toString() == txt1 && ar[3 + values[1]].toString() == txt2) {
+            console.log(values);
+            if ((values[1] == 0 && document.getElementById("reponse1").checked) ||
+                (values[1] == 1 && document.getElementById("reponse2").checked)) {
                 document.getElementById("Resultat").innerHTML = "Bravo c'est la bonne réponse";
             }
             else {
-                document.getElementById("Resultat").innerHTML = "C'est loupé pour cette fois, la bonne réponse était : ";
-                document.getElementById("TextReponse").innerHTML = txt[values[0]] + ar[values[0]] +" ; " + txt[3 + values[1]] + ar[3 + values[1]];
+                document.getElementById("Resultat").innerHTML = "C'est loupé pour cette fois...";
             }
         }
 
         function recommencer(){
+            values = CreateReciproque();
             typefigure = Randint(0,1);
-            values = CreateThales(typefigure);
             DessinerFigure(typefigure);
-            var tx;
-            if (typefigure == 0)
-                txt = ["BC = ","DC = ","BD = ","AB = ","ED = ","AE = "];
-            else
-                txt = ["BC = ","DC = ","BD = ","AC = ","EC = ","AE = "];
-            document.getElementById("mesure1").innerHTML = txt[values[0]];
-            document.getElementById("mesure2").innerHTML = txt[3 + values[1]];
             document.getElementById("Resultat").innerHTML = "";
-            document.getElementById("TextReponse").innerHTML = "";
             document.getElementById("reponse1").value = "";
             document.getElementById("reponse2").value = "";
+            document.getElementById("reponse1").checked = false;
+            document.getElementById("reponse2").checked = false;
 
         }
 
@@ -87,43 +65,28 @@
                 ctx.font = "20px Arial";
                 var t;
                 console.log(values);
-                if (values[1] == 0)//AB
-                    ctx.fillText("? cm", margin+50, 20);
-                else{
-                    t = values[2][0];
-                    ctx.fillText("AC = " + t.toString() + " cm", margin+50, -10);
-                }
-                if (values[0] == 0)//BC
-                    ctx.fillText("? cm", margin+230, 20);
-                else{
+                if (values[0] != 0)
+                {
+                    t = Round(values[2][0] - values[2][1]);
+                    ctx.fillText(t.toString() + " cm", margin+50, 20);
                     t = values[2][1];
                     ctx.fillText(t.toString() + " cm", margin+230, 20);
                 }
                 ctx.rotate(-18 * Math.PI / 180);
                 ctx.rotate(-11 * Math.PI / 180);
-                if (values[0] == 1)//CD
-                    ctx.fillText("? cm", margin+170, 240);
-                else{
+                if (values[0] != 1)
+                {
                     t = values[2][2];
                     ctx.fillText(t.toString() + " cm", margin+170, 240);
-                }
-                if (values[1] == 1)//DE
-                    ctx.fillText("? cm", margin-5, 240);
-                else{
-                    t = values[2][3];
-                    ctx.fillText("EC = " + t.toString() + " cm", margin-5, 260);
+                    t = Round(values[2][3] - values[2][2]);
+                    ctx.fillText(t.toString() + " cm", margin-5, 240);
                 }
                 ctx.rotate(11 * Math.PI / 180);
                 ctx.rotate(-90 * Math.PI / 180);
-                if (values[1] == 2)//AE
-                    ctx.fillText("? cm", -h/2 - 20, 45);
-                else{
+                if (values[0] != 2)
+                {
                     t = values[2][4];
                     ctx.fillText(t.toString() + " cm", -h/2 - 20, 45);
-                }
-                if (values[0] == 2)//AE
-                    ctx.fillText("? cm", -h/2 - 30, margin + (w - 2 * margin)*1/3 - 5);
-                else{
                     t = values[2][5];
                     ctx.fillText(t.toString() + " cm", -h/2 - 30, margin + (w - 2 * margin)*1/3 - 5);
                 }
@@ -153,43 +116,28 @@
                 ctx.rotate(23 * Math.PI / 180);
                 var t;
                 console.log(values);
-                if (values[1] == 0)//AB
-                    ctx.fillText("? cm", margin+75, 20);
-                else{
+                if (values[0] != 0)
+                {
                     t = values[2][0];
                     ctx.fillText(t.toString() + " cm", margin+75, 20);
-                }
-                if (values[0] == 0)//BC
-                    ctx.fillText("? cm", margin+270, 20);
-                else{
                     t = values[2][1];
                     ctx.fillText(t.toString() + " cm", margin+270, 20);
                 }
                 ctx.rotate(-23 * Math.PI / 180);
                 ctx.rotate(-12 * Math.PI / 180);
-                if (values[0] == 1)//CD
-                    ctx.fillText("? cm", margin+220, 165);
-                else{
+                if (values[0] != 1)
+                {
                     t = values[2][2];
                     ctx.fillText(t.toString() + " cm", margin+220, 165);
-                }
-                if (values[1] == 1)//DE
-                    ctx.fillText("? cm", margin+30, 165);
-                else{
                     t = values[2][3];
                     ctx.fillText(t.toString() + " cm", margin+30, 165);
                 }
                 ctx.rotate(12 * Math.PI / 180);
                 ctx.rotate(-90 * Math.PI / 180);
-                if (values[1] == 2)//AE
-                    ctx.fillText("? cm", -h/2 - 10, 45);
-                else{
+                if (values[0] != 2)
+                {
                     t = values[2][4];
                     ctx.fillText(t.toString() + " cm", -h/2 - 10, 45);
-                }
-                if (values[0] == 2)//BD
-                    ctx.fillText("? cm", -h/2 - 40, w-margin + 5 - 10);
-                else{
                     t = values[2][5];
                     ctx.fillText(t.toString() + " cm", -h/2 - 40, w-margin + 5 - 10);
                 }
@@ -203,23 +151,21 @@
 <body onload="recommencer();">
     <div style="height: 50px;"></div>
     <h1><b><u>
-        Utiliser le théorème de Thalès.
+        Utiliser la réciproque du théorème de Thalès.
     </h1></b></u>
     <p>
-        <label>Consigne : Calculer toutes les longueurs manquantes,</label>
-        <u><b>ATTENTION</b></u> la virgule est un point !
+        Consigne : Les points A;B;C et E;D;C sont alignés. Les droites (AE) et (BD) sont-elles-parallèles ?
     </p>
     <canvas id="myCanvas" width="450" height="250" style="color: white;stroke: white;">
         Your browser does not support the HTML5 canvas tag.
     </canvas>
     <p>
-        <Label id="mesure1"></Label>
-        <input class="backbutton" type="text" id="reponse1"><br>
-        <Label id="mesure2"></Label>
-        <input class="backbutton" type="text" id="reponse2"><br>
+        <input class="backbutton" type="radio" name="radio1" id="reponse1">
+        <label id="reponse1l" for="reponse1">(AE) est parallèle à (BD)</label><br>
+        <input class="backbutton" type="radio" name="radio1" id="reponse2">
+        <label id="reponse2l" for="reponse2">(AE) n'est pas parallèle à (BD)</label><br>
         <input class="backbutton" type="button" value="Valider" onclick="testReponse()"><br>
-        <label id="Resultat"></label>
-        <label id="TextReponse"></label><br>
+        <label id="Resultat"></label><br>
     </p>
     <p>
         <input class="backbutton" type="button" value="Recommencer ?" onclick="recommencer()">
